FLOE-167: Addng UIO to the floeproject.org site. We still don't have high-contrast images, and the line spacing is not as spaced out as Joanna's designs since that would have broken the line spacing preference. (http://issues.fluidproject.org/browse/FLUID-4491)

--- a/css/style.css
+++ b/css/style.css
@@ -92,8 +92,7 @@ body {
 /* FLOE Header area, tagline, and logo. */
 .floe-header {
     margin-left: 1.8em;
-    margin-top: 4em;
-    margin-bottom: 2em;
+    margin-top: 2em;
     height: 4em;
     display: inline-block;
 }
@@ -212,10 +211,6 @@ body {
     font-weight:bold;    
 }
 
-.floe-content p {
-    line-height: 1.6;
-}
-
 .floe-content .floe-date {
     color: #585858;
     font-weight: bold;
@@ -326,7 +321,6 @@ body {
 
 .floe-footer .floe-content {
     color: #fff;
-    line-height: 1.7;
 }
 
 .floe-footer .floe-content a {
@@ -375,7 +369,7 @@ body {
 }
 .floe-story > ul {
     overflow: auto;
-    margin-bottom: 7em;
+    margin-bottom: 2em;
 }
 .floe-story  > ul > li {
     display: block;
@@ -391,6 +385,7 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 1em;
 }
 .floe-story h2,
 .floe-video h2 {
@@ -408,12 +403,15 @@ body {
     background-color: #FFCB00;
     text-decoration: none;
     border-bottom: none;
-    padding: 0.2em 0.4em;
+    padding: 0 0.2em;
 }
 .floe-content.floe-story a:hover,
 .floe-content.floe-story a:focus {
     color: #FFCB00;
     background-color: #000000;
+}
+.floe-content.floe-story a.flc-toc-anchors {
+    background-color: transparent;
 }
 
 .floe-story-cloud {
@@ -439,4 +437,19 @@ body {
 }
 .floe-breadcrumbs {
     margin: 1em;
+}
+
+.fl-theme-prefsEditor-bw .floe-bottom-content,
+.fl-theme-prefsEditor-bw .floe-footer,
+.fl-theme-prefsEditor-by .floe-bottom-content,
+.fl-theme-prefsEditor-by .floe-footer {
+    border-top: 1px solid #000000;
+}
+.fl-theme-prefsEditor-yb .floe-bottom-content,
+.fl-theme-prefsEditor-yb .floe-footer {
+    border-top: 1px solid #FFFF00;
+}
+.fl-theme-prefsEditor-wb .floe-bottom-content,
+.fl-theme-prefsEditor-wb .floe-footer {
+    border-top: 1px solid #FFFFFF;
 }
